<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login_history_acticity">LoginHistoryActicity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="rows_in_db">Rows in table Users:</string>
    <string name="action_clear_db">Clear DB</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_back">Back</string>
    <string name="menu_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_email_taken">Email address taken!</string>
    <string name="error_email_not_found">No user with that email!</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_passwords_mismatch">The passwords does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
</resources>
